--- a/mysite/registration/templates/registration/login.html
+++ b/mysite/registration/templates/registration/login.html
@@ -7,7 +7,7 @@
 		
 		<div>
 			<p>
-				Email: <input type="text" name="Email" value="" size="50" />
+				phone: <input type="text" name="phone" value="" size="50" />
 			</p>
 			<br />
 			
