--- a/mysite/registration/templates/registration/login.html
+++ b/mysite/registration/templates/registration/login.html
@@ -1,22 +1,102 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width",initial-scale="1.0">
+  <title>Account-Loved One </title>
+     {% load static%}
+  <link rel="stylesheet"  href="{%  static  'css/style.css'  %}">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+</head>
+<body>
+
+   <div class="container">
+      <div class="navbar">
+           <div class="logo">
+             <img src="{% static 'img/lovedone.png' %}" width="120px" height="88px" >
+           </div>
+           <nav>
+             <ul id="MenuItems">
+               <li><a href="{% url 'store:home'  %}">Home</a></li>
+               <li><a href="{% url 'store:ProductGenaricList'  %}">Products</a></li>
+               <li><a href="{% url 'registration:login'  %}">Account</a></li>
+               <li><a href="">About</a></li>
+               <li><a href="{% url 'store:ContactUs'  %}">Contact</a></li>
+            </ul>
+          </nav>
+          <img src="{% static 'img/cart.png'%}" width="30px" height="30px" class="cart-icon">
+          <img src="{% static 'img/menu.png'%}" class="menu-icon" >
+       </div>
+
+ </div>
+<!------login & register------>
+<div class="account-page">
+    <div class="container">
+        <div class="row">
+            <div class ="col6 c2">
+                <img src="{% static 'img/image.JPG'%}"  >
+            </div>
+            <div class="col6">
+                <div class="form-container">
+                    <div class="form-btn">
+                        <span id="login">Login</span>
+                          <span>Register</span>
+
+                        <hr id="indicator">
+                    </div>
+                    <form id="login_form" method="post" action="{% url 'registration:login' %}">
+                        {% csrf_token %}
+                         <input type="text" name="Email" />
+                         <input type="password" name="password"/>
+                        <button type="Submit" class="btn">Login</button>
+
+                        <a href="{% url 'registration:password_reset' %}">Forget Password</a>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="footer">
+<div class="container">
+  <div class="row">
+    <div class="footer-col1">
+      <h3>Download Our App</h3>
+      <p>Download App for Android and iOS Mobile Phone</p>
+<div class="app-logo">
+<img src="{% static 'img/play-store.png' %}">
+<img src="{% static 'img/app-store.png' %}">
+</div>
+    </div>
+    <div class="footer-col2">
+       <img src="{% static 'img/1.jpg' %}" width="120px" height="88px" >
+       <p> Our Purpose Is To Sustainably Make Our Customers Happy and Satisfied </p>
+    </div>
+   <div class="footer-col3">
+       <h3>Useful Links</h3>
+       <ul>
+        <li>Coupons</li>
+        <li>Return Policy</li>
+       </ul>
+   </div>
+   <div class="footer-col4">
+      <h3>Follow us</h3>
+       <ul>
+          <li>Facebook</li>
+          <li>Instagram</li>
+          <li>Twitter</li>
+       </ul>
+   </div>
+  </div>
+<hr>
+<p class="copyright">Copyrights &#169 2021-Designer Afnan</p>
+</div>
+</div>
 
 
-	<h1> Login </h1>
-	
-	<form id="login_form" method="post" action="{% url 'registration:login' %}">
-		{% csrf_token %}
-		
-		<div>
-			<p>
-				phone: <input type="text" name="phone" value="" size="50" />
-			</p>
-			<br />
-			
-			<p>
-				Password: <input type="password" name="password" value="" size="50" />
-			</p>
-			<br />
-		</div>
-		
-		<input type="submit" name="submit" value="Login">
-	</form>
-
+</body>
+</html>
